--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "i18next-http-backend": "^2.0.1",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -30,6 +31,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
